@@ -68,8 +68,11 @@ public:
     // return true if the object was initialized successfully
     bool IsOk() const { return m_impl != NULL; }
 
-    // get the display size
+    // get the full display size
     wxRect GetGeometry() const;
+
+    // get the client area of the display, i.e. without taskbars and such
+    wxRect GetClientArea() const;
 
     // name may be empty
     wxString GetName() const;
